increase memory for javadoc creation